Рефакторинг. Добавлен контент для нескольких блоков

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -410,6 +410,56 @@
             title:"Project Design and Engineering Services",
             commentsCount: "23 comments",
             bgColor:"unit--theme-blue"
-        }
+        },
 
+        {
+            unitType: "personPost",
+            unitGeometry:"",
+            locationStyles:["unit__person-info-wrap"],
+            avatar:"icon--person-avatar",
+            personInfoValue:"David Mc. Adams",
+            personInfoStyles:[
+                "unit__info--norm-bold",
+                "unit__info--black-text"
+            ],
+            personRateLocationStyles:["unit__person-rate-inline-wrap"],
+            personRate:[
+                "icon--person-rate4",
+                "icon--person-rate1none"
+            ],
+            article: "In most urban areas, construction has already built existing structures, many having been standing for decades.",
+            articleStyles:[
+                "unit__article--centered-text",
+                "unit__article--gray-text"
+            ],
+            bgColor: "unit--white"
+        },
+
+        {
+            unitType:"iconStatistic",
+            icons:[
+            {
+            iconLayer0: "icon--blue-square",
+            iconLayer1: ["icon--blue-square-bg", "icon--blue-square-bg--grey"],
+            iconLayer2: "icon--setting-tool-blue"
+            }
+            ],
+            mainInfoValue: "18 000",
+            subInfoValue: "Procurement",
+            bgColor:"unit--theme-foto"
+        },
+
+        {
+            unitType:"iconStatistic",
+            icons:[
+            {
+            iconLayer0: "icon--blue-square",
+            iconLayer1: "icon--blue-square-bg",
+            iconLayer2: "icon--light-bulb"
+            }
+            ],
+            mainInfoValue: "78 150",
+            subInfoValue: "Project Managments",
+            bgColor:"unit--white"
+        }
     ];
