--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -203,37 +203,37 @@ div.main.main--theme-white-gr
             //        hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity02.unit__horizontal--inline
             //        hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity02.unit__horizontal--inline
 
-            div.unit.unit--white
-                div.unit__person-info-wrap
-                    div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-bold.unit__info--black-text David Mc. Adams
-                    div.unit__person-rate-inline-wrap
-                        div.icon.icon--person-rate4
-                        div.icon.icon--person-rate1none
+            //div.unit.unit--white
+            //    div.unit__person-info-wrap
+            //        div.icon.icon--person-avatar
+            //        span.unit__info.unit__info--norm-bold.unit__info--black-text David Mc. Adams
+            //        div.unit__person-rate-inline-wrap
+            //            div.icon.icon--person-rate4
+            //            div.icon.icon--person-rate1none
+            //
+            //    p.unit__article.unit__article--centered-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
 
-                p.unit__article.unit__article--centered-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
+            //div.unit.unit--theme-foto
+            //    div.icon.icon--blue-square
+            //        div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
+            //            div.icon.icon--setting-tool-blue
+            //    span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 18 000
+            //    span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Procurement
 
-            div.unit.unit--theme-foto
-                div.icon.icon--blue-square
-                    div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
-                        div.icon.icon--setting-tool-blue
-                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 18 000
-                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Procurement
+            //div.unit.unit--white
+            //    div.icon.icon--blue-square
+            //        div.icon.icon--blue-square-bg
+            //            div.icon.icon--light-bulb
+            //    span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 78 150
+            //    span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Project Managments
 
-            div.unit.unit--white
-                div.icon.icon--blue-square
-                    div.icon.icon--blue-square-bg
-                        div.icon.icon--light-bulb
-                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 78 150
-                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Project Managments
-
-            div.unit.unit--vertical-double-unit.unit--white
-                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled.unit__title--fix-for-contemporary-vila Contemporary Villa
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
-                div.unit__fix-button-view-project-wrap
-                    input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left.button--fix-btn-view-project(type="button", value="view project")
+            //div.unit.unit--vertical-double-unit.unit--white
+            //    h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled.unit__title--fix-for-contemporary-vila Contemporary Villa
+            //    hr.unit__horizontal.unit__horizontal--black-solid
+            //    p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
+            //    p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text.unit__article--fix-for-contemporary-vila We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
+            //    div.unit__fix-button-view-project-wrap
+            //        input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left.button--fix-btn-view-project(type="button", value="view project")
 
             div.unit.unit--big-bg-layer-unit.unit--theme-foto
                 div.unit__picture--theme-rest
