Рефакторинг. Добавлен отдельный файл для unit в котором может быть несколько абзацев

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -461,5 +461,41 @@
             mainInfoValue: "78 150",
             subInfoValue: "Project Managments",
             bgColor:"unit--white"
+        },
+        {
+            unitGeometry:"unit--vertical-double-unit",
+            unitType: "doubleArticle",
+            title:"Contemporary Villa",
+            titleStyles: [
+                "unit__title--big-bold",
+                "unit__title--med-width",
+                "unit__title--black-text",
+                "unit__title--uppercase-disabled",
+                "unit__title--fix-for-contemporary-vila"
+            ],
+            hrLine: true,
+            articles: [
+                "Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.",
+                "We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From"
+            ],
+            articleStyles:[
+                "unit__article--theme-unit-black-text",
+                "unit__article--gray-text",
+                "unit__article--fix-for-contemporary-vila"
+            ],
+            buttons:[
+                {
+                    caption:"view project",
+                    btnStyles:[
+                        "button--theme-unit-btn",
+                        "button--yellow-bg",
+                        "button--text-black",
+                        "unit__button-buttom-left",
+                        "button--fix-btn-view-project"
+                    ],
+                    locationStyles:["unit__fix-button-view-project-wrap"]
+                }
+            ],
+            bgColor:"unit--white"
         }
     ];
